# fireflyGbacp

./: README.md  fireflyGbacp.cabal  gbacpFireflyLambda.cabal
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/flag-cache/: fireflyGbacp-0.1.0.0-J2A8rv1wkZpIP1ofKyg7i
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSfireflyGbacp-0.1.0.0-J2A8rv1wkZpIP1ofKyg7i-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/lib/x86_64-osx-ghc-8.0.2/fireflyGbacp-0.1.0.0-J2A8rv1wkZpIP1ofKyg7i/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/lib/x86_64-osx-ghc-8.0.2/fireflyGbacp-0.1.0.0-J2A8rv1wkZpIP1ofKyg7i/Lib/: Prelude.dyn_hi
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/lib/x86_64-osx-ghc-8.0.2/fireflyGbacp-0.1.0.0-J2A8rv1wkZpIP1ofKyg7i/Parameters/: Firefly.dyn_hi  Firefly.hi  Gbacp.dyn_hi
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/pkgdb/: fireflyGbacp-0.1.0.0-J2A8rv1wkZpIP1ofKyg7i.conf  package.cache
src/Parameters/: Firefly.hs  Gbacp.hs
src/Results/: input.csv
